# ALchemist

./: .dockerignore  .gitignore  404.html  DOCKER.md  Dockerfile  LICENSE  MANIFEST.in  REACT_VISUALIZATIONS_COMPLETE.md  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0-beta.1.md  RELEASE_NOTES_v0.3.0.md  SESSION_AUDIT_REST_MIGRATION.md  TESTING.md  VISUALIZATION_API_REFERENCE.md  VISUALIZATION_BACKEND_COMPLETE.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyproject_core.toml  run_api.py  setup.py  sitemap.xml
.github/workflows/: deploy-docs.yml  publish-pypi.yml  tests.yml
ISSUES_LOG/: index.html
acquisition/botorch/: index.html
acquisition/logging/: index.html
acquisition/skopt/: index.html
alchemist/: __init__.py
alchemist-web/: .env.development  .env.production  CONTOUR_PLOT_IMPLEMENTATION.md  INTEGRATION_GPR.md  PHASE2_PLAN.md  QUICK_REFERENCE.md  README.md  SESSION_PERSISTENCE_FIXES.md  SESSION_SAVE_LOAD_FEATURE.md  SETUP.md  index.html  package-lock.json  package.json
alchemist-web/src/: App.tsx
alchemist-web/src/api/: types.ts
alchemist-web/src/components/: AuditLockDialog.tsx  PendingSuggestionsPanel.tsx  TargetColumnDialog.tsx
alchemist-web/src/hooks/: useLockStatus.ts  useSessionEvents.ts
alchemist_core/: __init__.py  audit_log.py  config.py  session.py
alchemist_core/acquisition/: __init__.py  botorch_acquisition.py  skopt_acquisition.py
alchemist_core/data/: experiment_manager.py  search_space.py
alchemist_core/models/: __init__.py  botorch_model.py  sklearn_model.py
alchemist_core/utils/: __init__.py  acquisition_utils.py
alchemist_core/visualization/: README.md  __init__.py  helpers.py  plots.py
api/: API_ENDPOINTS.md  README.md  main.py
api/acquisition/: index.html
api/models/: index.html  requests.py  responses.py
api/python_overview/: index.html
api/rest/: index.html
api/routers/: acquisition.py  experiments.py  sessions.py  variables.py  visualizations.py  websocket.py
api/search_space/: index.html
api/services/: session_store.py
api/session/: index.html
api/session_class/: index.html
assets/: logo-development.pptx
background/bayesian_optimization/: index.html
background/interpreting_calibration/: index.html
background/interpreting_qqplot/: index.html
background/kernels/: index.html
build_tools/: build_hooks.py  pyproject_core.toml
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
docs/: ISSUES_LOG.md  index.md  use_cases.md
docs/acquisition/: botorch.md  logging.md  skopt.md
docs/api/: acquisition.md  models.md  python_overview.md  rest.md  search_space.md  session.md  session_class.md
docs/background/: bayesian_optimization.md  interpreting_calibration.md  interpreting_qqplot.md  kernels.md
docs/modeling/: botorch.md  performance.md  skopt.md
docs/reproducibility/: audit_logs.md  sessions.md
docs/setup/: initial_sampling.md  load_data.md  variable_space.md  web_app.md
docs/visualizations/: calibration_curve.md  contour_plot.md  error_metrics.md  metrics_plot.md  parity_plot.md  qq_plot.md
docs/workflow/: data_visualization.md  load_data.md  variable_space.md
logic/: clustering.py  emoc.py  experiment_manager.py  logging.py  optimization.py  pool.py  search_space.py
logic/acquisition/: botorch_acquisition.py  skopt_acquisition.py
logic/models/: base_model.py  botorch_model.py  sklearn_model.py
modeling/botorch/: index.html
modeling/performance/: index.html
modeling/skopt/: index.html
packaging/: setup.py
reproducibility/audit_logs/: index.html
reproducibility/sessions/: index.html
resources/: index.html
scripts/: README.md  build_production.bat  build_production.sh  bump_version.py  dev_start.bat  dev_start.sh  fix_bullet_lists.py  run_tests_coverage.bat  run_tests_coverage.sh  test_audit_api.py  test_build.py
search/: search_index.json
setup/data_visualization/: index.html
setup/initial_sampling/: index.html
setup/load_data/: index.html
setup/variable_space/: index.html
setup/web_app/: index.html
site/: 404.html
site/resources/: index.html
templates/connection_panels/: QUICK_START.md  README.md  SESSION_LOCKING_REFERENCE.md
tests/: catalyst_experiments.csv  catalyst_search_space.json  conftest.py  test_audit_log.py  test_core_data.py  test_core_improvements.py  test_pool_no_ui.py
tests/api/: test_catalyst_real_data.py  test_endpoints.py
tests/docker/: test_docker.py
tests/unit/: test_acquisition_evaluation.py  test_regret_plot.py
ui/: acquisition_panel.py  gpr_panel.py  notifications.py  target_column_dialog.py  ui.py  variables_setup.py  visualizations.py
use_cases/: index.html
visualizations/calibration_curve/: index.html
visualizations/contour_plot/: index.html
visualizations/error_metrics/: index.html
visualizations/metrics_plot/: index.html
visualizations/parity_plot/: index.html
visualizations/qq_plot/: index.html
workflow/data_visualization/: index.html
workflow/initial_sampling/: index.html
workflow/load_data/: index.html
(+74 files in other folders)
