[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "alchemist"
version = "0.2.0"
description = "Active learning and optimization toolkit"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Caleb Coatney", email = "caleb.coatney@nrel.gov"}]
license = "BSD-3-Clause"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "mplcursors",
    "scikit-learn",
    "scikit-optimize",
    "botorch",
    "torch",
    "gpytorch",
    "ax-platform",
    "customtkinter",
    "tksheet",
    "tabulate",
    "ctkmessagebox",
    "joblib",
    # FastAPI dependencies
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",  # For file uploads
]

[project.scripts]
alchemist = "main:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-anyio>=0.0.0",
    "httpx>=0.25.0",  # Required for FastAPI TestClient
    "requests>=2.31.0",  # Required for some tests
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-anyio>=0.0.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["ui*", "alchemist_core*", "api*"]

[project.urls]
"Homepage" = "https://github.com/NREL/ALchemist"
"Source" = "https://github.com/NREL/ALchemist"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]

[tool.coverage.run]
source = ["alchemist_core", "api", "ui"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "alchemist-web/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

